# smoothfact

./: .gitignore  .qmlls.ini  BankLoanPage.qml  BankMovementPage.qml  CMakeLists.txt  CompanyData.qml  CompanyNames.js  CountryAddresses.js  DocAlfandegaPage.qml  EstadoOutrosPage.qml  HttpRequest.js  Info.qml  InfoPage.qml  Infopage.qml  InvoiceForm.qml  InvoicePage.qml  InvoiceShowData.qml  InvoiceShowHeader.qml  InvoiceShowPDF.qml  InvoiceShowRows.qml  InvoiceShowTail.qml  Invoicepage.qml  IrnPage.qml  LoginDialog.qml  LoginForm.qml  Main.qml  MainMenu.qml  README.txt  VatCheck.js  VatGen.js  WorkersPage.qml  generateCompanyName.js  imgpdfprovider.cpp  imgpdfprovider.h  main.cpp  pdfcontroller.cpp  pdfcontroller.h  pdfimageprovider.cpp  remotepdfrenderer.cpp  remotepdfrenderer.h
.github/: copilot-instructions.md
Alfandega/: nomenclatura-capitulo.js
backend/: bank_movement.php  bank_movement_excel.php  cae.csv  cae.json  cae.xlsx  composer.json  customers.php  db.php  generate_iban.php  generate_nif.php  generate_niss.php  generate_portuguese_name.php  iban.php  info.php  invoice.php  login.php  logout.php  nif.php  nif_niss.php  nif_niss_test.php  niss.php  portuguese_addresses.php  portuguese_names.php  random_addresses.php  session_start.php  suppliers.php  table.html  test_connection.php  user_registration.php  workers.php
backend/helper-scripts/: bank_movement.php  bank_movement_excel.php  invoice.php  nif_niss_test.php  test_connection.php  user_registration.php
bankloans/: BankLoanForm.qml  BankLoanPage.qml  BankLoanShowData.qml
cpp/: pdfalfandega.cpp  pdfalfandega.h  pdfbuysellnvoice.cpp  pdfbuysellnvoice.h  pdfcontroller.cpp  pdfcontroller.h  pdfimageProvider.h  pdfimageprovider.cpp  pdfinvoice.cpp  pdfinvoice.h  pdfloaninstallmentinvoice.cpp  pdfloaninstallmentinvoice.h  pdfloaninvoice.cpp  pdfloaninvoice.h  pdfseguros.cpp  pdfseguros.h  qrcode.cpp  qrcode.h
customcontrols/: CustomBinCheckbox.qml  CustomButton.qml  CustomCaeCombo.qml  CustomCombo.qml  CustomCountryCombo.qml  CustomCustomerSupplierCombo.qml  CustomDateField.qml  CustomIbanCombo.qml  CustomMFCheckbox.qml  CustomSwitch.qml  CustomTextArea.qml  CustomTextField.qml  cae.js  country_codes.js  iban_prefix.js
images/: LogoutIcon.qml
invoices/: InvoiceForm.qml  InvoicePage.qml  ShowPDF.qml
invoices/seguros/: SeguroAT.qml  SeguroAuto.qml  SeguroMultirrisco.qml  SeguroRS.qml  SegurosPage.qml
javascripts/: HttpRequest.js  formatnumber.js
menu/: MainMenu.qml  MainStack.qml
python/: validate.py
seguros/: SeguroMultirrisco.qml  SeguroRS.qml  SegurosPage.qml
sellinvoice/: SellInvoiceForm.qml  SellInvoicePage.qml
